[gd_scene load_steps=4 format=3 uid="uid://crafting_screen_uid"]

[ext_resource type="Script" path="res://CraftingScreen.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://graphics/ui/terminal_bg.png" id="2_bg"]
[ext_resource type="Texture2D" path="res://graphics/ui/panel_border.png" id="3_border"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bg"]
texture = ExtResource("2_bg")
modulate_color = Color(0.6, 0.6, 0.7, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_panel"]
texture = ExtResource("3_border")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0

[node name="CraftingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][b][color=#ffaa00]WORKSHOP // FABRICATION UNIT[/color][/b][/center]"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="BlueprintListPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_panel")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/BlueprintListPanel"]
layout_mode = 2

[node name="BlueprintList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/BlueprintListPanel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DetailsPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/DetailsPanel"]
layout_mode = 2

[node name="ItemNameLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/DetailsPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[b]Select a Blueprint[/b]"
fit_content = true

[node name="ItemStatsLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/DetailsPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "..."

[node name="CostLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/DetailsPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Cost:"
fit_content = true

[node name="CraftButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/DetailsPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "CONSTRUCT"

[node name="Footer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/Footer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "EXIT WORKSHOP"
